Bug 150515 - BDO Tag to reverse the direction of text is not functional in Konqueror
Summary: BDO Tag to reverse the direction of text is not functional in Konqueror
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml renderer (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 66890 170872 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-10-05 20:29 UTC by dan o
Modified: 2008-09-11 20:03 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dan o 2007-10-05 20:29:44 UTC
Version:            (using KDE KDE 3.5.6)
Installed from:    Ubuntu Packages
OS:                Linux

The HTML Tag, "BDO", does not seem to be functional in the Konqueror browser.  It is used to reverse the display order of text, such as when using the language Hebrew where the direction of text is right to left.  

In a web page with mostly English text, one might want to insert a phrase of Hebrew text.  The HTML author would type the following code in to the web page.

################
################

<html>
<body>

<p>
If your browser supports bi-directional override (bdo), the next line will be written from the right to the left (rtl):
</p>

<bdo dir="rtl">
Here is some Hebrew text.
</bdo>

</body>
</html>

################
################

The output on the screen shows ".txet werbeH emos si ereH" in Firefox 2 and Internet Explorer 7, but not Konqueror or Safari.
Comment 1 Maksim Orlovich 2007-10-05 21:32:12 UTC
*** Bug 66890 has been marked as a duplicate of this bug. ***
Comment 2 Maksim Orlovich 2007-10-05 21:37:47 UTC
Odd. It reverses the period only. The HTML frontend translates it thus into CSS:
{direction: ltr; unicode-bidi: embed;}

I am not a renderer or BiDi guy, so can't comment beyond this.
Comment 3 Charles Samuels 2008-01-10 09:13:15 UTC
SVN commit 759219 by charles:

Support the HTML tag <bdo> (bidirectional override). As a result, support
CSS unicode-bidi: override.

First, don't change two CSS properties in html_elementimpl.cpp as it may
unexpectedly overwrite a previously set property. This allows us to add the
"selector that seems to be still broken" in khtml4.css.

Then make Qt render override text in RTL, even if it's Latin script.

Add a kate variable line because it will make me happy.

Also, fix a bug where it would render <bdo> as not rtl the first time you try
to do bidi stuff in konq (per process). This is because some global (!)
variables were being used unintialized.

There are still some bugs remaining (non-regression) related to the
application of the override. I have some testcases for this but it
requires a sacrifice to the bidi.cpp gods.

BUG:150515



 M  +2 -0      css/cssstyleselector.cpp  
 M  +0 -2      css/html4.css  
 M  +0 -1      html/html_elementimpl.cpp  
 M  +8 -4      rendering/bidi.cpp  
 M  +11 -1     rendering/font.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=759219
Comment 4 Maksim Orlovich 2008-09-11 20:03:32 UTC
*** Bug 170872 has been marked as a duplicate of this bug. ***